Update NEWS for 2.6.2 release.

--- a/NEWS
+++ b/NEWS
@@ -1226,3 +1226,8 @@ v 2.6.1 -- 23 Jul 2020
  * Fix issues on Debian major architectures
  * Fix numerous reported bugs (mpoly, fq_poly, mpn_mul_1, mod 2 code, etc.)
 
+v 2.6.2 -- 31 Jul 2020
+
+ * Fix for choice of generator in an fq finite field of degree one
+ * Fix an incorrectly written test
+
