--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -281,7 +281,7 @@ aim of providing support for multicore and multiprocessor computer
 architectures. To this end, the library is threadsafe, with few exceptions
 noted in the appropriate place.
 
-FLINT is currently maintained by William Hart of Technishe Universit\"{a}t
+FLINT is currently maintained by William Hart of Technische Universit\"{a}t
 in Kaiserslautern and Fredrik Johansson of INRIA Bordeaux.
 
 FLINT was originally designed by William Hart and David Harvey. Since then
