--- a/NEWS
+++ b/NEWS
@@ -1300,4 +1300,13 @@ v 2.6.3 -- 12 Aug 2020
    fmpq_poly_xgcd for polynomials of length >= 340.
  * Fix some copyright assignments
  * Fix some documentation errors
- 
+
+2.8.4 -- 17 Nov 2021
+
+ * Fix a serious big in fmpz_mod_poly_xgcd for polynomials of large length
+ * Fix an assertion failure in fmpz_mat_solve_fflu (only relevant if asserts enabled)
+ * Fix some bugs on 32 bit machines
+ * Work around a compiler bug on Apple M1
+ * Fix bug in nmod_mpoly_factor (returned 0 for some factorisations)
+ * Fix some documentation build errors and some doc formatting issues
+
