--- a/fft_small/README
+++ b/fft_small/README
@@ -181,3 +181,26 @@ products in the range +-2*n^2 are reduced to the range +-0.7127874929693703*n
 products in the range +-3*n^2 are reduced to the range +-0.7381685812262074*n
 products in the range +-4*n^2 are reduced to the range +-0.9255749859387407*n
 
+
+==========================
+
+8x8 transpose with avx512
+
+x0[0] ... x0[7]
+...       ...
+x7[0] ... x7[7]
+
+t0 = unpacklo(x0, x1) // x0[0],x1[0], x0[2],x1[2], x0[4],x1[4], x0[6],x1[6]
+t1 = unpacklo(x2, x3) // x2[0],x3[0], x2[2],x3[2], x2[4],x3[4], x2[6],x3[6]
+t2 = unpacklo(x4, x5) // x4[0],x5[0], x4[2],x5[2], x4[4],x5[4], x4[6],x5[6]
+t3 = unpacklo(x6, x7) // x6[0],x7[0], x6[2],x7[2], x6[4],x7[4], x6[6],x7[6]
+t4 = unpackhi(x0, x1) // x0[1],x1[1], x0[3],x1[3], x0[5],x1[5], x0[7],x1[7]
+t5 = unpackhi(x2, x3) // x2[1],x3[1], x2[3],x3[3], x2[5],x3[5], x2[7],x3[7]
+t6 = unpackhi(x4, x5) // x4[1],x5[1], x4[3],x5[3], x4[5],x5[5], x4[7],x5[7]
+t7 = unpackhi(x6, x7) // x6[1],x7[1], x6[3],x7[3], x6[5],x7[5], x6[7],x7[7]
+
+
+s0 = (t0, t1) // x0[0],x1[0],x2[0],x3[0], 
+
+
+
